@@ -20,6 +20,9 @@ sub belongs_to {
   # assume a foreign key contraint unless defined otherwise
   $attrs->{is_foreign_key_constraint} = 1
     if not exists $attrs->{is_foreign_key_constraint};
+
+  $attrs->{is_foreign_rel} = 1
+    if not exists $attrs->{is_foreign_rel};
   $attrs->{undef_on_null_fk} = 1
     if not exists $attrs->{undef_on_null_fk};
 
